--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -1,14 +1,15 @@
 // Footer styles
 .main-footer {
-    transition: all 0.250s;
+    position: absolute;
+    transition: transform 0.450s;
     text-align: center;
     font-size: 15px;
     padding: 30px 0;
-    position: fixed;
-    bottom: 0;
     width: 100%;
     left: 50%;
-    transform: translateX(-50%) translateY(120px);
+    top: 100%;
+    // transform: translateX(-50%) translateY(120px);
+    transform: translateX(-50%) translateY(0px);
     background-color: black;
     min-height: auto;
     z-index: 10;
@@ -34,7 +35,10 @@
         }
     }
     &.-show-footer {
-        transform: translateX(-50%) translateY(0px);
+        // transform: translateX(-50%) translateY(0px);
+    }
+    &.-hide-footer {
+        transform: translateX(-50%) translateY(120px);
     }
     a {
         color: white;
