--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -4,6 +4,7 @@ body {
     font-size: 20px;
     font-family: Roboto,sans-serif;
     background: black url(../images/backgrounds/bg-body.jpg) 50% 0;
+    overflow-x: hidden;
     @media (max-width: $breakpoint-phablet) {
         font-size: 18px;
     }
