--- a/webapp/static/css/styles.css
+++ b/webapp/static/css/styles.css
@@ -133,6 +133,7 @@ body {
   font-size: 20px;
   font-family: Roboto,sans-serif;
   background: black url(../images/backgrounds/bg-body.jpg) 50% 0;
+  overflow-x: hidden;
 }
 @media (max-width: 640px) {
   body {
@@ -332,10 +333,7 @@ a:hover {
 
 .section-feedback__cta-slack {
   transition: all 0.40s;
-  opacity: 0;
-  -webkit-transform: translateX(-1000px);
-  -ms-transform: translateX(-1000px);
-  transform: translateX(-1000px);
+  opacity: 1;
 }
 .section-feedback__cta-slack.-show {
   opacity: 1;
@@ -351,10 +349,7 @@ a:hover {
 
 .section-feedback__cta-twitter {
   transition: all 0.40s;
-  opacity: 0;
-  -webkit-transform: translateX(1000px);
-  -ms-transform: translateX(1000px);
-  transform: translateX(1000px);
+  opacity: 1;
 }
 .section-feedback__cta-twitter.-show {
   opacity: 1;
@@ -401,17 +396,18 @@ a:hover {
 }
 
 .main-footer {
-  transition: all 0.250s;
+  position: absolute;
+  transition: -webkit-transform 0.450s;
+  transition: transform 0.450s;
   text-align: center;
   font-size: 15px;
   padding: 30px 0;
-  position: fixed;
-  bottom: 0;
   width: 100%;
   left: 50%;
-  -webkit-transform: translateX(-50%) translateY(120px);
-  -ms-transform: translateX(-50%) translateY(120px);
-  transform: translateX(-50%) translateY(120px);
+  top: 100%;
+  -webkit-transform: translateX(-50%) translateY(0px);
+  -ms-transform: translateX(-50%) translateY(0px);
+  transform: translateX(-50%) translateY(0px);
   background-color: black;
   min-height: auto;
   z-index: 10;
@@ -441,10 +437,10 @@ a:hover {
     padding-left: 0px;
   }
 }
-.main-footer.-show-footer {
-  -webkit-transform: translateX(-50%) translateY(0px);
-  -ms-transform: translateX(-50%) translateY(0px);
-  transform: translateX(-50%) translateY(0px);
+.main-footer.-hide-footer {
+  -webkit-transform: translateX(-50%) translateY(120px);
+  -ms-transform: translateX(-50%) translateY(120px);
+  transform: translateX(-50%) translateY(120px);
 }
 .main-footer a {
   color: white;
